; ModuleID = '/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_snesusb.c_hidpad_snesusb_deinit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_snesusb.c_hidpad_snesusb_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hidpad_snesusb_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @hidpad_snesusb_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hidpad_snesusb_deinit(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hidpad_snesusb_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.hidpad_snesusb_data*
  store %struct.hidpad_snesusb_data* %5, %struct.hidpad_snesusb_data** %3, align 8
  %6 = load %struct.hidpad_snesusb_data*, %struct.hidpad_snesusb_data** %3, align 8
  %7 = icmp ne %struct.hidpad_snesusb_data* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.hidpad_snesusb_data*, %struct.hidpad_snesusb_data** %3, align 8
  %10 = call i32 @free(%struct.hidpad_snesusb_data* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @free(%struct.hidpad_snesusb_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
